<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.base</groupId>
    <artifactId>spring-boot-cli</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>spring-boot-cli</name>
    <description>Spring Boot 2.0.3.Release 脚手架</description>

    <!-- 项目使用SpringBoot2.0.3.RELEASE -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.0.3.RELEASE</version>
    </parent>

    <modules>
        <module>cli-common</module>
        <module>cli-service</module>
        <module>cli-starter</module>
        <module>cli-monitor</module>
        <module>cli-web</module>
        <module>cli-api</module>
    </modules>

    <properties>
        <!-- 项目环境，项目使用JDK1.8进行开发 -->
        <java.version>10</java.version>
        <spring-boot-version>1.5.9.RELEASE</spring-boot-version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>10</maven.compiler.source>
        <maven.compiler.target>10</maven.compiler.target>

        <!-- MyBatis版本 -->
        <mybatis.version>1.3.0</mybatis.version>

        <!-- 阿里巴巴Druid数据库连接池版本 -->
        <druid.version>1.1.6</druid.version>

        <!-- Redis驱动包版本 -->
        <jedis.version>2.9.0</jedis.version>
        <spring-data-redis.version>1.6.2.RELEASE</spring-data-redis.version>

        <!-- 数据校验框架版本 -->
        <validator.version>5.1.3.Final</validator.version>
        <validator-api.version>1.1.0.Final</validator-api.version>

        <!-- 阿里巴巴FastJson版本 -->
        <fastjson.version>1.2.41</fastjson.version>

        <!-- JSON处理工具版本 -->
        <jackson.version>2.9.2</jackson.version>
        <json-lib.version>2.4</json-lib.version>

        <!-- 邮件 -->
        <email.version>1.4.7</email.version>

        <!-- servlet版本 -->
        <servlet.version>2.5</servlet.version>

        <!-- Apache公用工具包版本 -->
        <commons-lang3.version>3.3.2</commons-lang3.version>
        <commons-io.version>2.4</commons-io.version>
        <commons-codec.version>1.9</commons-codec.version>
        <commons-fileupload.version>1.3.1</commons-fileupload.version>
        <commons-beanutils.version>1.9.2</commons-beanutils.version>

        <!-- 单元测试版本 -->
        <juni.version>4.11</juni.version>

        <!-- spring boot admin 监控版本 -->
        <spring.boot.admin.version>2.0.0</spring.boot.admin.version>

        <shiro-spring.version>1.3.2</shiro-spring.version>
        <shiro-redis.version>2.4.2.1-RELEASE</shiro-redis.version>
        <jwt.version>3.2.0</jwt.version>
        <thymeleaf-extras-shiro.version>1.2.1</thymeleaf-extras-shiro.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${commons-codec.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>${commons-fileupload.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>${commons-beanutils.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- jackson json -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-jaxb-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!--fast json-->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>${fastjson.version}</version>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>${servlet.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- slf4j 核心包 -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>spring-boot-cli</finalName>
    </build>
</project>
